[gd_scene load_steps=8 format=3 uid="uid://n2gqfog4lvsj"]

[ext_resource type="Script" uid="uid://ccgt47asft6r5" path="res://enemy.gd" id="1_2hac7"]
[ext_resource type="Shader" uid="uid://bxx6anwmvvvqo" path="res://gfx/outline.gdshader" id="1_s7bn3"]
[ext_resource type="Texture2D" uid="uid://j8r6styju41h" path="res://gfx/front sprites/WYNAUT.png" id="1_tt7e2"]
[ext_resource type="FontFile" uid="uid://m6vbclqldwjn" path="res://gfx/power clear.ttf" id="4_e6d4v"]
[ext_resource type="Script" uid="uid://cu8mcln86t2tg" path="res://active_word_label.gd" id="6_rvmyp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e6d4v"]
bg_color = Color(0.16470589, 0.7058824, 0.12941177, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2hac7"]
shader = ExtResource("1_s7bn3")
shader_parameter/color = Color(0.8156863, 0, 0, 0.5372549)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/number_of_images = Vector2(1, 1)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_2hac7")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -22.0
offset_top = 14.0
offset_right = 26.0
offset_bottom = 25.0
theme_override_colors/font_color = Color(0.16373834, 0.5885187, 2.5027991e-06, 1)
theme_override_styles/fill = SubResource("StyleBoxFlat_e6d4v")
allow_greater = true
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="EnemySprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_2hac7")
position = Vector2(1, 0)
scale = Vector2(0.33, 0.33)
texture = ExtResource("1_tt7e2")

[node name="ActiveWordLabel" type="RichTextLabel" parent="EnemySprite"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.48700002
anchor_right = 0.5
anchor_bottom = 0.48700002
offset_left = -373.93942
offset_top = -196.10182
offset_right = 13.060577
offset_bottom = -157.71799
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme_override_constants/table_v_separation = 3
theme_override_fonts/normal_font = ExtResource("4_e6d4v")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "paranthetical hyper ultra mega"
fit_content = true
scroll_active = false
autowrap_mode = 0
autowrap_trim_flags = 0
horizontal_alignment = 1
vertical_alignment = 1
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
script = ExtResource("6_rvmyp")
